[gd_scene load_steps=34 format=2]

[ext_resource path="res://GAME2.gd" type="Script" id=1]
[ext_resource path="res://frame/Honeyview_all images-03.png" type="Texture" id=2]
[ext_resource path="res://font/Honeyview_all images-08.png" type="Texture" id=3]
[ext_resource path="res://Bg.png" type="Texture" id=4]
[ext_resource path="res://kelefei/Honeyview_5.png" type="Texture" id=5]
[ext_resource path="res://kelefei/Honeyview_all images-22.png" type="Texture" id=6]
[ext_resource path="res://watch/Honeyview_all images-16.png" type="Texture" id=8]
[ext_resource path="res://watch/Honeyview_all images-21.png" type="Texture" id=9]
[ext_resource path="res://frame/Honeyview_all images-27.png" type="Texture" id=10]
[ext_resource path="res://setofont.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://kelefei/Honeyview_new 打氣-01.png" type="Texture" id=12]
[ext_resource path="res://item/Honeyview_all images-15.png" type="Texture" id=13]
[ext_resource path="res://Honeyview_12.png" type="Texture" id=14]
[ext_resource path="res://frame/Honeyview_all images-25.png" type="Texture" id=15]
[ext_resource path="res://font/Honeyview_all images-05.png" type="Texture" id=16]
[ext_resource path="res://Honeyview_all images-17.png" type="Texture" id=17]
[ext_resource path="res://watch/Honeyview_all images-19.png" type="Texture" id=18]
[ext_resource path="res://watch/Honeyview_all images-20.png" type="Texture" id=19]
[ext_resource path="res://item/Honeyview_all images-04.png" type="Texture" id=20]
[ext_resource path="res://font/Honeyview_all images-11.png" type="Texture" id=21]
[ext_resource path="res://kelefei/Honeyview_all images-24.png" type="Texture" id=22]
[ext_resource path="res://kelefei/Honeyview_all images-02.png" type="Texture" id=23]
[ext_resource path="res://Honeyview_all images-14.png" type="Texture" id=24]
[ext_resource path="res://y2mate.com - 8bit音樂數碼寶貝OPButterfly_320kbps.mp3" type="AudioStream" id=25]
[ext_resource path="res://watch/Honeyview_all images-18.png" type="Texture" id=27]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 3.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "lose",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "win",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 27 ), ExtResource( 18 ), ExtResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 8.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "lose",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "win",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 45
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=7]
size = 50
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=6]
size = 30
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.951754, 1 )
colors = PoolColorArray( 0.980392, 1, 0, 1, 1, 0.87451, 0.152941, 1, 0.956863, 1, 0, 1 )

[sub_resource type="GradientTexture2D" id=4]
gradient = SubResource( 3 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 11 )

[node name="GAME2" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 4 )

[node name="kelefei" type="AnimatedSprite" parent="background"]
position = Vector2( 244, 205 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )

[node name="robot" type="AnimatedSprite" parent="background"]
position = Vector2( -190, 22 )
frames = SubResource( 2 )
frame = 3

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="welcome" type="Sprite" parent="CanvasLayer"]
position = Vector2( 504, 286 )
scale = Vector2( 1.09244, 0.913919 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/welcome"]
scale = Vector2( 1.31048, 1.47062 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="HoneyviewAllImages-15" type="Sprite" parent="CanvasLayer/welcome"]
position = Vector2( 351.508, -194.766 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 13 )

[node name="star" type="Sprite" parent="CanvasLayer/welcome"]
visible = false
position = Vector2( 5.49231, -212.273 )

[node name="HoneyviewAllImages-14" type="Sprite" parent="CanvasLayer/welcome/star"]
position = Vector2( -79.6382, 25.1664 )
scale = Vector2( 0.844232, 1.08247 )
texture = ExtResource( 24 )

[node name="HoneyviewAllImages-16" type="Sprite" parent="CanvasLayer/welcome/star"]
position = Vector2( 25.6307, 21.8838 )
scale = Vector2( 0.844232, 1.08247 )
texture = ExtResource( 24 )

[node name="HoneyviewAllImages-17" type="Sprite" parent="CanvasLayer/welcome/star"]
position = Vector2( 133.646, 25.1663 )
scale = Vector2( 0.844232, 1.08247 )
texture = ExtResource( 24 )

[node name="Start" type="TextureButton" parent="CanvasLayer/welcome"]
margin_left = -142.8
margin_top = 75.499
margin_right = 157.2
margin_bottom = 256.499
texture_normal = ExtResource( 14 )

[node name="Label" type="Label" parent="CanvasLayer/welcome/Start"]
margin_left = 59.5002
margin_top = 52.5211
margin_right = 239.5
margin_bottom = 98.5211
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "開始遊戲"
align = 1

[node name="Label" type="Label" parent="CanvasLayer/welcome"]
margin_left = -320.384
margin_top = -131.303
margin_right = 329.616
margin_bottom = 81.6973
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "機械人停電了！
請在限時30秒內快速移動滑鼠
或者用手指快速掃動熒幕
幫助機械人充電！"
align = 1

[node name="score" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 628.0
margin_top = 35.0
margin_right = 668.0
margin_bottom = 49.0

[node name="timeleft" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 765.0
margin_top = 28.0
margin_right = 765.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 268, 34 )
texture = ExtResource( 17 )

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer/Sprite"]
margin_left = -231.0
margin_top = -6.0
margin_right = -167.0
margin_bottom = 58.0
rect_scale = Vector2( 6.287, 0.361 )
texture_progress = SubResource( 4 )

[node name="Failed" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 725, 300 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 15 )

[node name="fail" type="Sprite" parent="CanvasLayer/Failed"]
position = Vector2( 17.5, -81.6667 )
texture = ExtResource( 3 )

[node name="restart" type="TextureButton" parent="CanvasLayer/Failed"]
margin_left = -134.167
margin_top = -15.8333
margin_right = 165.833
margin_bottom = 165.167
texture_normal = ExtResource( 14 )

[node name="HoneyviewAllImages-11" type="Sprite" parent="CanvasLayer/Failed"]
position = Vector2( 13.3333, 60 )
scale = Vector2( 0.286844, 0.398015 )
texture = ExtResource( 21 )

[node name="Passed" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 726, 292 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 2 )

[node name="HoneyviewAllImages-04" type="Sprite" parent="CanvasLayer/Passed"]
position = Vector2( 44.1666, -8.33333 )
scale = Vector2( 0.833073, 0.812644 )
texture = ExtResource( 20 )

[node name="HoneyviewAllImages-05" type="Sprite" parent="CanvasLayer/Passed"]
position = Vector2( -140.833, 16.6667 )
scale = Vector2( 0.550073, 0.505319 )
texture = ExtResource( 20 )

[node name="HoneyviewAllImages-06" type="Sprite" parent="CanvasLayer/Passed"]
position = Vector2( 206.667, 28.3333 )
scale = Vector2( 0.516136, 0.498012 )
texture = ExtResource( 20 )

[node name="success" type="Sprite" parent="CanvasLayer/Passed"]
position = Vector2( 48.3334, -39.1667 )
texture = ExtResource( 16 )

[node name="restart" type="TextureButton" parent="CanvasLayer/Passed"]
margin_left = -135.833
margin_right = 164.167
margin_bottom = 181.0
texture_normal = ExtResource( 14 )

[node name="HoneyviewAllImages-11" type="Sprite" parent="CanvasLayer/Passed"]
position = Vector2( 15, 78.3333 )
scale = Vector2( 0.320553, 0.409514 )
texture = ExtResource( 21 )

[node name="HTTPRequest" type="HTTPRequest" parent="CanvasLayer"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 25 )
autoplay = true

[node name="email" type="Label" parent="."]
margin_left = 57.0
margin_top = 542.0
margin_right = 57.0
margin_bottom = 559.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="CanvasLayer/welcome/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/Failed/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/Passed/restart" to="." method="_on_restart_pressed"]
[connection signal="request_completed" from="CanvasLayer/HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
